app-v2/manifiests/ing.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: frontend
  name: minimal-ingress-py
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    kubernetes.io/ingress.class: "nginx"
    acme.cert-manager.io/http01-edit-in-place: "true"
spec:
  tls:
  - hosts:
      - pythonv1.k8.com
      - pythonv2.k8.com
    secretName: tls-secret
  ingressClassName: nginx
  rules:
  - http:
      paths:
      - path: /v1
        pathType: Prefix
        backend:
          service:
            name: lb-svc
            port:
              number: 8500
  - http:
      paths:
      - path: /v2
        pathType: Prefix
        backend:
          service:
            name: lb-svc-v2
            port:
              number: 8550

  - host: "pythonv1.k8.com"
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: lb-svc
            port:
              number: 8500

  # - host: "pythonv2.k8.com"
  #   http:
  #     paths:
  #     - pathType: Prefix
  #       path: "/"
  #       backend:
  #         service:
  #           name: lb-svc-v2
  #           port:
  #             number: 8550

 

---


apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: frontend
  name: minimal-ingress-cana-py
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    # cert-manager.io/cluster-issuer: "letsencrypt-prod"
    # kubernetes.io/ingress.class: "nginx"
    # acme.cert-manager.io/http01-edit-in-place: "true"
    nginx.ingress.kubernetes.io/canary: "true"
    nginx.ingress.kubernetes.io/canary-weight: "30"
spec:
  # tls:
  # - hosts:
  #     - pythonv1.k8.com
  #     - pythonv2.k8.com
  #   secretName: tls-secret
  ingressClassName: nginx
  rules:
  - host: "pythonv1.k8.com"
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: lb-svc-v2
            port:
              number: 8500

  # - host: "pythonv2.k8.com"
  #   http:
  #     paths:
  #     - pathType: Prefix
  #       path: "/"
  #       backend:
  #         service:
  #           name: lb-svc-v2
  #           port:
  #             number: 8550
